fix layout bug: it would get shrank if there was no content on a page

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -6,8 +6,8 @@ body {
 }
 
 .App {
-	width: 100%;
-	max-width: 1920px;
+	width: 100vw;
+	max-width: 1440px;
 }
 
 %header {
